# Slushie

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  lib.rs  usage.md
jsonrpsee_server/: Cargo.toml  RADME.md  README.md  local_test_curl  localtest_curl.md  metadata.scale
jsonrpsee_server/src/: keystore.rs  lib.rs  main.rs  methods.rs  public_inputs.rs  test-correct-pp  utils.rs
jsonrpsee_server/test_data/: test-proof
plonk_prover/: Cargo.toml  README.md  vd-test
plonk_prover/src/: circuit.rs  commitment_generation.rs  hasher.rs  js.rs  lib.rs  merkle_tree.rs  proof_generation.rs  proof_verification.rs  public_parameters_generation.rs  utils.rs
plonk_prover_tool/: Cargo.toml  README.md  op.json  test-correct-pp  test-json.json
plonk_prover_tool/src/: actions.rs  commands.rs  main.rs  utils.rs
public-parameters/: commit-key-test  op-key-test  opening-key-test  pp-test  vd-test
shared/: Cargo.toml
shared/src/: constants.rs  functions.rs  lib.rs  public_inputs.rs  public_types.rs
slushie/: Cargo.toml  lib.rs  utils.rs
slushie/tree/: hasher.rs  merkle_tree.rs
slushie_wasm/: Cargo.toml  README.md
slushie_wasm/src/: lib.rs
tests/: README.md  jest.config.js  package.json  tsconfig.json
tests/tests/: contract-deploy.ts  deposit.ts  get-root-hash.ts  tests.test.ts  utils.ts  withdraw.ts
tree/: hasher.rs  merkle_tree.rs  mod.rs
