[package]
name = "jsonrpsee_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
#jsonrpsee = { path = "../jsonrpsee", features = ["full"] }
jsonrpsee = { version = "0.15.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1" }
subxt = { version = "0.23.0", git = "https://github.com/paritytech/subxt", branch = "master" }
parity-scale-codec = "3.1.5"
sp-keyring = "6.0.0"
hex = "0.4.3"
shared = { path = "../shared", default-features = false }