
[package]
name = "jsonrpsee_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "slushie-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
futures = "0.3"
async_once = "0.2.6"
#jsonrpsee = { path = "../jsonrpsee", features = ["full"] }
jsonrpsee = { version = "0.15.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1" }
subxt = { version = "0.23.0", git = "https://github.com/paritytech/subxt", branch = "master" }
parity-scale-codec = "3.1.5"
sp-keyring = "6.0.0"
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", features = ["full_crypto"] }
sp-keystore = { version = "0.12.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
hex = "0.4.3"
lazy_static = "1.4.0"
shared = { path = "../shared", default-features = false }
plonk_prover = { path = "../plonk_prover", features = ["parallel"] }
dusk-bytes = "0.1"
hex-literal = "0.3.4"