[package]
name = "plonk_prover"
version = "0.1.0"
authors = ["4IRE <info@4irelabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-bls12_381 = { version = "0.11.0-rc", default-features = false }
dusk-jubjub = { version = "0.12.0-rc", default-features = false }
dusk-plonk = { version = "0.12.0-rc", default-features = false, features = [
    "alloc",
] }
dusk-poseidon = { version = "0.26.0-rc.0", default-features = false, features = [
    "alloc",
] }
dusk-bytes = "0.1"

hex-literal = "0.3.4"
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }
getrandom = { version = "0.2.7", default-features = false, features = ["js"] }

shared = { path = "../shared", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.33"
js-sys = "0.3.59"

[dev-dependencies]
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[features]
default = []
parallel = [
    "dusk-bls12_381/default",
    "dusk-jubjub/std",
    "dusk-plonk/std",
    "dusk-poseidon/std",
    "shared/default",
]
