[package]
name = "plonk_prover"
version = "0.1.0"
authors = ["4IRE <info@4irelabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
dusk-bls12_381 = { version = "0.11.0", default-features = false }
dusk-jubjub = { version = "0.12.0", default-features = false }
dusk-plonk = { version = "0.12.0", default-features = false, features = [
    "alloc",
] }
dusk-poseidon = { version = "0.26.0", default-features = false, features = [
    "alloc",
] }
dusk-bytes = "0.1"

hex-literal = "0.3.4"
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
], optional = true }
getrandom = { version = "0.2.7", default-features = false, features = [
    "js",
], optional = true }

shared = { path = "../shared", default-features = false }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["proof_generator"]
proof_generator = ["rand_core", "getrandom"]
parallel = [
    "dusk-bls12_381/default",
    "dusk-jubjub/std",
    "dusk-plonk/std",
    "dusk-poseidon/std",
    "shared/default",
]
