[package]
name = "plonk_prover"
version = "0.1.0"
authors = ["4IRE <info@4irelabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-bls12_381 = { version = "0.11.0", default-features = false }
dusk-jubjub = { version = "0.12.0", default-features = false }
dusk-plonk = { version = "0.12.0", default-features = false, features = [
    "alloc",
] }
dusk-poseidon = { version = "0.26.0", default-features = false, features = [
    "alloc",
] }
dusk-bytes = "0.1"

rand = { version = "0.8.5", optional = true }
hex-literal = "0.3.4"
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
], optional = true }
getrandom = { version = "0.2.7", default-features = false, features = [
    "js",
], optional = true }

shared = { path = "../shared", default-features = false }

ink_storage = { version = "3", default-features = false, optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
], optional = true }
scale-info = { version = "2", default-features = false, features = [
    "derive",
], optional = true }
ink_primitives = { version = "3", default-features = false, optional = true }
ink_env = { version = "3", default-features = false, optional = true }
ink_metadata = { version = "3", default-features = false, features = [
    "derive",
], optional = true }

wasm-bindgen = { version = "0.2.33", optional = true }
js-sys = { version = "0.3.59", optional = true }

[dev-dependencies]
rand = "0.8.5"
wasm-bindgen-test = "0.3.0"

[features]
default = ["proof_generator"]

# Feature for a proof generation. Can be used in an environment where random is possible. 
# Used in CLI and WASM but not in a contract
proof_generator = ["rand_core", "getrandom", "rand"]

# Feature for parallelization proof generation and verification.
# Used in CLI but not in a contract or WASM
parallel = [
    "dusk-bls12_381/default",
    "dusk-jubjub/std",
    "dusk-plonk/std",
    "dusk-poseidon/std",
    "shared/default",
]

# Feature for compatibility with ink!
ink = ["ink_storage", "scale", "ink_env", "ink_primitives"]

js = ["wasm-bindgen", "js-sys", "proof_generator"]

std = [
    "ink_env/std",
    "ink_metadata/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "dusk-poseidon/std",
    "dusk-bls12_381/std",
    "shared/default",
    "scale-info/std",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
