[package]
name = "plonk_prover_tool"
version = "0.1.0"
authors = ["4IRE <info@4irelabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonk_prover = { path = "../plonk_prover" }
clap = { version = "3.2.7", features = ["derive"] }
sp-core = "6.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
