[package]
name = "shared"
version = "0.1.0"
authors = ["4IRE <info@4irelabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
dusk-bls12_381 = { version = "0.10", default-features = false }

[features]
default = ["std"]
std = ["dusk-bls12_381/default"]
