[package]
name = "slushie_wasm"
version = "0.1.0"
authors = ["4IRE <info@4irelabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.33" }
js-sys = { version = "0.3.59" }

plonk_prover = { path = "../plonk_prover" }
shared = { path = "../shared", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
rand = "0.8.5"
hex-literal = "0.3.4"
dusk-bls12_381 = { version = "0.11.0-rc", default-features = false }
dusk-jubjub = { version = "0.12.0-rc", default-features = false }
dusk-plonk = { version = "0.12.0-rc", default-features = false, features = [
    "alloc",
] }
dusk-poseidon = { version = "0.26.0-rc.0", default-features = false, features = [
    "alloc",
] }
dusk-bytes = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
